# Tuchuang_QuickRepo

./: CMakeLists.txt  HttpConn.cpp  HttpConn.h  README.md  main.cpp  nginx.conf  tc_http_server.conf
mysql/: DBPool.cpp  DBPool.h
nginx_upload_module-2.2.0/: README.md
tc-front/: index.html  package-lock.json
tc-src/api/: ApiDealfile.h  ApiDealsharefile.cpp  ApiDealsharefile.h  ApiLogin.cpp  ApiLogin.h  ApiMd5.cpp  ApiMd5.h  ApiMyfiles.cpp  ApiMyfiles.h  ApiRegister.cpp  ApiRegister.h  ApiSharefiles.cpp  ApiSharefiles.h  ApiSharepicture.cpp  ApiSharepicture.h  ApiUpload.cpp  ApiUpload.h
tc-src/base/: BaseSocket.h  Common.h  ConfigFileReader.h  EventDispatch.h  HttpParserWrapper.h  Lock.h  ThreadPool.h  UtilPdu.h  fdfs_api.h  http_parser.h  netlib.h  ostype.h  scoped_ptr.h  util.h
tc-src/mysql/: DBPool.cpp  DBPool.h
